# advent-of-code-2022

./: .ocamlinit  aoc.opam  day03.ml  day05.ml  day06.ml  dune-project
lib/: board.ml  coord.ml  dune  input.ml  search.ml
